fixed a bug where background picture not showing up corectly

--- a/css/style.css
+++ b/css/style.css
@@ -300,12 +300,18 @@ a:hover{
     align-items: center;
   }
   .nav-ul{
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
   }
   .profile-picture{
     position:static;
+  }
+  
+  #about{
+    flex-direction: column;
   }
   
 }
